fix version mobile

--- a/css/base.css
+++ b/css/base.css
@@ -98,10 +98,10 @@ table.minimalistBlack tfoot td {
 		width: 120px;
 	  }
 	}
-	.search {
-		position: relative;
-		float: left;
-	width: 270px;
+.search {
+	position: relative;
+	float: left;
+	width: 260px;
 	height: 28px;
 	font-size: 20px;
 	margin-right: 10px;
@@ -115,7 +115,7 @@ table.minimalistBlack tfoot td {
 .legend {
 	position: relative;
 	padding: 2px 10px 2px 10px;
-	float: left;
+	float: right;
 
 }
 .result {
@@ -159,7 +159,7 @@ table.minimalistBlack tfoot td {
 }
 
 .grid-container--fill {
-	grid-template-columns: repeat(auto-fit, minmax(490px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
 }
 .statistics {
 	position: relative;
@@ -178,7 +178,6 @@ table.minimalistBlack tfoot td {
 #header {
 	position: relative;
 	margin: auto;
-	width: 394px;
 }
 
 #footer {
